--- a/feedback.html
+++ b/feedback.html
@@ -27,9 +27,7 @@
         </h3>
         <h3 class="fourth-h3">to a friend or a colleague?</h3>
       </div>
-      <div id="star-contain">
-        <img src="./assets/star.svg" alt="" />
-      </div>
+      <div id="star-contain"></div>
       <h3 class="fourth-h3">
         Leave us an open feedback about your experience so far
       </h3>
@@ -42,5 +40,6 @@
       />
       <button class="fourth-button">MORE INFO</button>
     </footer>
+    <script src="fourthpage.js"></script>
   </body>
 </html>
