--- a/results.html
+++ b/results.html
@@ -49,9 +49,10 @@
       </main>
 
       <footer>
-        <a href="" id="feed">RATE US</a>
+        <a href="./feedback.html" id="feed">RATE US</a>
       </footer>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
     <script src="./assets/js/results.js"></script>
   </body>
 </html>
