Proceeded with the js of benchmark

--- a/benchmark.html
+++ b/benchmark.html
@@ -12,7 +12,7 @@
     />
     <link rel="stylesheet" href="./assets/benchmark.css" />
     <link rel="stylesheet" href="./assets/reset.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script> -->
   </head>
   <body>
     <header>
@@ -28,26 +28,26 @@
         </svg>
       </div>
     </header>
-    <main class="main-second-page">
-      <h1 id="h1-second-page">
-        How I can create a <span>checkbox in HTML?</span>
-      </h1>
-      <div class="contain-answers">
-        <input class="answers" type="button" name="mela" value="MELA" />
+    <main id="main-second-page">
+      <h1 id="h1-second-page"></h1>
+      <!-- <div class="contain-answers">
+        <input class="answers" type="button" value="MELA" />
       </div>
       <div class="contain-answers">
-        <input class="answers" type="button" name="pera" value="PERA" />
+        <input class="answers" type="button" value="PERA" />
       </div>
 
       <div class="contain-answers">
-        <input class="answers" type="button" name="banana" value="BANANA" />
+        <input class="answers" type="button" value="BANANA" />
       </div>
       <div class="contain-answers">
-        <input class="answers" type="button" name="uva" value="UVA" />
-      </div>
+        <input class="answers" type="button" value="UVA" />
+      </div> -->
     </main>
     <footer id="footer-second-page">
+      <button id="button-confirm-question">CONFERMA!</button>
       <p>QUESTION 1 <span> / 10</span></p>
     </footer>
+    <script src="./benchmark.js"></script>
   </body>
 </html>
