--- a/benchmark.html
+++ b/benchmark.html
@@ -30,7 +30,7 @@
     </header>
     <main id="main-second-page">
       <h1 id="h1-second-page"></h1>
-      <!-- <div class="contain-answers">
+      <!-- <div class="-answerscontain">
         <input class="answers" type="button" value="MELA" />
       </div>
       <div class="contain-answers">
