--- a/benchmark.html
+++ b/benchmark.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header>
-      <img src="./assets/img/epicode_logo.png" alt="Logo Epicode" />x\
+      <img src="./assets/img/epicode_logo.png" alt="Logo Epicode" />
       <div class="countdown">
         <svg viewBox="-50 -50 100 100" stroke-width="10">
           <circle r="45"></circle>
