--- a/results.html
+++ b/results.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Result </title>
+    <title>Result</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -13,9 +13,10 @@
     />
     <link rel="stylesheet" href="./assets/results.css" />
   </head>
-  <div id="logo-container">
-    <img src="/assets/img/epicode_logo.png" alt="epicode logo" />
   <body id="result-body">
+    <div id="logo-container">
+      <img src="/assets/img/epicode_logo.png" alt="epicode logo" />
+    </div>
     <div class="result">
       <h1>Results</h1>
       <p>The summary of your answers:</p>
@@ -24,11 +25,14 @@
       <span class="answers position_correct" id="correct">Correct</span>
       <span class="answers position_correct" id="true_question">66.7%</span>
       <span class="answers position_correct" id="quantity_true"
-        >4/6 questions</span>>
-      <div class="container">
-        <div class="value_container"></div>
-        <div id="text_result">text</div>
-      </div>
+        >4/6 questions</span
+      >>
+    </div>
+    <div class="container">
+      <div class="value_container"></div>
+      <div id="text_result">text</div>
+    </div>
+    <div>
       <span class="answers position_wrong" id="wrong">Wrong</span>
       <span class="answers position_wrong" id="false_question">33.3%</span>
       <span class="answers position_wrong" id="quantity_false"
@@ -38,8 +42,7 @@
         ><input type="button" id="feedback-button" value="Rate Us"
       /></a>
     </div>
-    
+
     <script src="./results.js"></script>
-    
   </body>
 </html>
