--- a/firstpage.html
+++ b/firstpage.html
@@ -39,7 +39,7 @@
       </ul>
     </main>
     <footer class="footer-firstpage">
-      <input type="checkbox" name="" id="first-checkbox" />
+      <input type="checkbox" id="first-checkbox" />
       <p>I promise to answer myself without help without help from anyone</p>
       <button class="first-button">PROCEED</button>
     </footer>
