--- a/firstpage.html
+++ b/firstpage.html
@@ -33,9 +33,7 @@
           <span class="ul-span">answered once</span>
         </li>
         <li>Changing browser</li>
-        <li>
-          This exam will take approx.<span class="ul-span">0-5 minutes</span>
-        </li>
+        <li>This exam will take approx.<span class="ul-span"> 0-5 minutes</span></li>
       </ul>
     </main>
     <footer class="footer-firstpage">
