--- a/results.html
+++ b/results.html
@@ -7,13 +7,10 @@
     <title>Result</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter&family=Outfit&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Outfit&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./assets/results.css" />
   </head>
-  <body id="result-body">
+  <body>
     <div id="logo-container">
       <img src="/assets/img/epicode_logo.png" alt="epicode logo" />
     </div>
@@ -21,28 +18,25 @@
       <h1>Results</h1>
       <p>The summary of your answers:</p>
     </div>
-    <div class="percentage">
+    <div class="correctP">
       <span class="answers position_correct" id="correct">Correct</span>
       <span class="answers position_correct" id="true_question">66.7%</span>
-      <span class="answers position_correct" id="quantity_true"
-        >4/6 questions</span
-      >>
+      <span class="answers position_correct" id="quantity_true">4/6 questions</span>>
     </div>
     <div class="container">
       <div class="value_container"></div>
       <div id="text_result">text</div>
     </div>
-    <div>
+    <div class="correctP">
       <span class="answers position_wrong" id="wrong">Wrong</span>
       <span class="answers position_wrong" id="false_question">33.3%</span>
-      <span class="answers position_wrong" id="quantity_false"
-        >2/6 questions</span
-      >
-      <a href="./feedback.html"
-        ><input type="button" id="feedback-button" value="Rate Us"
-      /></a>
+      <span class="answers position_wrong" id="quantity_false">2/6 questions</span>
+      <a href="./feedback.html"><input type="button" id="feedback-button" value="Rate Us" /></a>
     </div>
 
+    <script src="./results.js"></script>
+  </body>
+</html>
     <script src="./results.js"></script>
   </body>
 </html>
