--- a/benchmark.html
+++ b/benchmark.html
@@ -25,6 +25,17 @@
             stroke-dasharray="282.7433388230814"
             stroke-dashoffset="282.7433388230814px"
           ></circle>
+          <text
+            x="-1"
+            y="-20"
+            font-size="7"
+            fill="white"
+            text-anchor="middle"
+            font-weight="bold"
+            font-family="Outfit"
+          >
+            SECONDS
+          </text>
         </svg>
       </div>
     </header>
