--- a/firstpage.html
+++ b/firstpage.html
@@ -33,11 +33,14 @@
           <span class="ul-span">answered once</span>
         </li>
         <li>Changing browser</li>
-        <li>This exam will take approx.<span class="ul-span"> 0-5 minutes</span></li>
+        <li>
+          This exam will take approx.<span class="ul-span"> 0-5 minutes</span>
+        </li>
       </ul>
     </main>
     <footer class="footer-firstpage">
       <input type="checkbox" id="first-checkbox" />
+      <label for="checkboxe"></label>
 
       <p>I promise to answer myself without help without help from anyone</p>
       <button class="first-button">PROCEED</button>
